compiling_error.txt
C:\Users\disco\Documents\atomIDE\Anthei\Number-Guess\main.c: In function 'main':
C:\Users\disco\Documents\atomIDE\Anthei\Number-Guess\main.c:18:3: warning: implicit declaration of function 'srand' [-Wimplicit-function-declaration]
   srand(time(NULL));
   ^
C:\Users\disco\Documents\atomIDE\Anthei\Number-Guess\main.c:26:8: error: 'answer' undeclared (first use in this function)
    if (answer == guess)
        ^
C:\Users\disco\Documents\atomIDE\Anthei\Number-Guess\main.c:26:8: note: each undeclared identifier is reported only once for each function it appears in
